feat: add export models data to spreadhsheet functionaçities. Make adjustments to Handle Export Data Util and make repository.
